# SynIM

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  compare_recmats.py  extrapolate_edge_pixel_v1.py  extrapolate_edge_pixel_v2.py  params_morfeo.yml  pyproject.toml  requirements.txt  run_compare_rotshiftzoom.py  run_extrapolate.py  run_matrix_naming.py  run_synim.py  run_synim_from_yaml.py  run_synim_from_yaml_ngs.py  synim.py  synim_utils.py  test_compare_rotshiftzoom.py
docs/: conf.py  general.rst  index.rst  installation.rst  requirements.txt
docs/api/: index.rst  params_manager.rst  params_utils.rst  synim.rst  synpm.rst  utils.rst
docs/scripts/: generate_api_docs.py
examples/: params_morfeo.yml  params_morfeo_proj.yml  run_matrix_naming.py  run_synim.py  run_synim_covariance_matrices.py  run_synim_from_pro_lgs.py  run_synim_from_yaml.py  run_synim_from_yaml_morfeo_tiny.py  run_synim_from_yaml_ngs.py  run_synim_from_yaml_proj.py  run_synim_from_yaml_proj_morfeo_tiny.py  test_extrapolate.py
matrix_naming/: filename_generator.py
synim/: __init__.py  params_common_utils.py  params_manager.py  params_utils.py  synim.py  synpm.py  synproj.py  utils.py  zernike.py
test/: test_covariance.py  test_extrapolation_cube.py  test_intmat.py  test_projection.py  test_rebin.py  test_sa_illumination.py  test_sh_intmat.py
test/data/: cov_zern_100m_128p_8m_0.2r0_50L0.fits
utils/: filename_generator.py  params_common_utils.py  params_manager.py  params_utils.py
